Moved css files to css folder

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" id="standardStyles" type="text/css" href="style.css">
+    <link rel="stylesheet" id="standardStyles" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,300,700,900italic">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
@@ -26,12 +26,12 @@
             var element3 = document.getElementById('changeCSS');
             var cssString = document.getElementById('standardStyles');
 
-            if (cssString.href.endsWith('style.css')) {
+            if (cssString.href.endsWith('css/style.css')) {
                 element3.innerHTML = 'Normal colours <i class="fa fa-adjust"></i>';
-                document.getElementById('standardStyles').href = 'highContrast.css';
+                document.getElementById('standardStyles').href = 'css/highContrast.css';
             } else {
                 element3.innerHTML = 'High contrast <i class="fa fa-adjust"></i>';
-                document.getElementById('standardStyles').href = 'style.css';
+                document.getElementById('standardStyles').href = 'css/style.css';
             }
         }
         
