--- a/offer.html
+++ b/offer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<link rel="stylesheet" type="text/css" id="standardStyles" href="style.css">
+	<link rel="stylesheet" type="text/css" id="standardStyles" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,300,700,900italic" >
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
@@ -19,7 +19,7 @@
     <header>
         
         <div class="top-banner">
-            <a class="access-bar pointer" onclick="document.getElementById('standardStyles').href='highContrast.css'">High contrast 
+            <a class="access-bar pointer" onclick="document.getElementById('standardStyles').href='css/highContrast.css'">High contrast 
                 <i class="fa fa-adjust"></i>
             </a> 
                 <p class="access-bar" onclick=""> | </p>
