Added seperate js

--- a/index.html
+++ b/index.html
@@ -5,43 +5,13 @@
     <link rel="stylesheet" id="standardStyles" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,300,700,900italic">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="js/script.js"></script>
+
 
     <title>Home - Chollerton Tearoom</title>
     <meta charset="utf-8">
     <meta name="description" content="Home page for Chollerton Tearooms">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
-
-    <script type="text/javascript">
-        //<![CDATA[
-        function offerAppear(id, id2, state) {
-            'use strict';
-            var element = document.getElementById(id);
-            var element2 = document.getElementById(id2);
-            element.style.visibility = state;
-            element2.style.visibility = state;
-
-        }
-
-        function cssFile() {
-            var element3 = document.getElementById('changeCSS');
-            var cssString = document.getElementById('standardStyles');
-
-            if (cssString.href.endsWith('css/style.css')) {
-                element3.innerHTML = 'Normal colours <i class="fa fa-adjust"></i>';
-                document.getElementById('standardStyles').href = 'css/highContrast.css';
-            } else {
-                element3.innerHTML = 'High contrast <i class="fa fa-adjust"></i>';
-                document.getElementById('standardStyles').href = 'css/style.css';
-            }
-        }
-        
-        function changeFontSize( id, size) {
-            var element4 = document.getElementById( id);
-            element4.style.fontSize = size;
-        }
-
-        //]]>
-    </script>
 
 </head>
 
