corrected content message, added refs to credits

--- a/credits.html
+++ b/credits.html
@@ -82,6 +82,14 @@
                     <p><b>Zeltser, L. (2011). Learning to Live with Social Networks: Risks and Rewards.</b>
                         <br />http://zeltser.com/presentations/
                         <br />[accessed 04-03-2013]
+                        <br /><b>GET and POST</b>
+                        <br />http://www.w3schools.com/tags/ref_httpmethods.asp
+                        M
+                        <br />[accessed 04-03-2016]
+                        <br /><b>Captcha</b>
+                        <br />'State of the art spam and abuse protection for your website'
+                        <br />https://www.google.com/recaptcha/intro/index.html
+                        <br />[accessed 04-03-2016]
                     </p>
                 </div>
                 <div class="content-box-2 spacer">
@@ -101,13 +109,14 @@
                         http://comps.canstockphoto.com/can-stock-photo_csp5022518.jpg
                         <br />[accessed 30-11-2015]
                         <br /> Personalised myself using Adobe Illustrator. http://www.adobe.com/uk/products/illustrator.html
+                        
                     </p>
                 </div>
             </div>
 
             <div class="content-box-1">
                 <h2>Security consideration</h2>
-                <p>The following security considerations will ensure your websites security, availability and the confidentiality of your users. The first step is to ensure the use of non-standard ports when communicating with the database. The standard port is 80, this should be changed to a non-standard port to add an extra layer of security to the server. To further secure the website I would recommend you install a firewall on the computer used to operate the website. An extra consideration would be to ensure the firewall is different to the webserver firewall, as each firewall will check different vulnerabilities. Furthermore, I would advise any amendments to the form are sent using the POST parameter, not the GET, as GET displays the information you send in the URL. I also suggest adding a captcha to the form, ensuring the responses to the form are human and are not automated bots or spam.</p>
+                <p>The following security considerations will ensure your websites security, availability and the confidentiality of your users. The first step is to ensure the use of non-standard ports when communicating with the database. The standard port is 80, this should be changed to a non-standard port to add an extra layer of security to the server. To further secure the website I would recommend you install a firewall on the computer used to operate the website. An extra consideration would be to ensure the firewall is different to the webserver firewall, as each firewall will check different vulnerabilities. Furthermore, I would advise any amendments to the form are sent using the POST parameter, not the GET, as POST requests do not reamin in browser history, are not cached and cannot be bookmarked(w3schools.com, 2016). I also suggest adding a form of captcha to the form, ensuring the responses to the form are human and are not automated bots or spam.(Google.com, 2016)</p>
                 <p>The social engineering aspects of your security should also be taken into consideration. Do not install any unnecessary or untrusted programs on your computer, as they could exploit your system this way. Similarly, be aware of phishing emails where their aim is to trick you into thinking you have received an email from a trusted source in an attempt to steal your passwords.(zelster.com, 2011) If you are logging into your website check the Secure Hyper Text Transfer Protocol(HTTPS) is being used, and for extra clarification click the lock icon on the web browser to view the Digital certificate. The Secure part of HTTP uses the Secure Sockets Layer(SSL) to protect data passed over the internet. 
                 </p>
             </div>
