Removed random terms and conditions form bottom of pages.

--- a/credits.html
+++ b/credits.html
@@ -89,6 +89,10 @@
                         <br />'State of the art spam and abuse protection for your website'
                         <br />https://www.google.com/recaptcha/intro/index.html
                         <br />[accessed 04-03-2016]
+                        
+                        <br /><b>Dele Dele-Ajayi (2016) Introduction to web security, from EN407 Web Technologies.</b>
+                        <br />Northumbria University, Newcastle 07/03/2016. 
+                        <br />Available from: Blackboard [accessed 18/04/16]
                     </p>
                 </div>
                 <div class="content-box-2 spacer">
@@ -108,6 +112,11 @@
                         http://comps.canstockphoto.com/can-stock-photo_csp5022518.jpg
                         <br />[accessed 30-11-2015]
                         <br /> Personalised myself using Adobe Illustrator. http://www.adobe.com/uk/products/illustrator.html
+                        <br />
+                        <b>Send method images - Font-awesome</b>
+                        <br />Phone, Letter, House.
+                        <br />https://fortawesome.github.io/Font-Awesome/get-started/
+                        <br />[accessed 30-11-2015]
                         
                     </p>
                 </div>
@@ -121,17 +130,6 @@
             </div>
 
         </main>
-
-        <!-- Terms and conditions -->
-        <aside>
-            <div class="content-box-1">
-                <hr>
-                <div class="content-padding">
-                    <h4>Terms and conditions</h4>
-                    <p>All offers are correct as of 20/11/2015. Offers must be confirmed with a member of staff before they are available to the customer. Chollerton Tearooms reserves the right to refuse an offer. </p>
-                </div>
-            </div>
-        </aside>
     </div>
 
     <!-- Footer -->
