--- a/findoutmore.html
+++ b/findoutmore.html
@@ -89,7 +89,7 @@
                                 <input type="text" id="postCode" name="postCode" tabindex="12" accesskey="p" />
                             </label>
                             
-                            <label for="sendMethod">Contact by:
+                            <label for="sendMethod">Contact by:*
                                 <select id="sendMethod" name="sendMethod">
                                     <option id="post" value="post">Letter</option>
                                     <option id="email" value="email">Email</option>
